# spark-iceberg-compaction

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
docs/: CDP_Kerberos_AutoTLS_Maintenance_Runbook.md  CDP_Kerberos_Keytab_Guide.md
guide/: SBI_Iceberg_Compaction_Maintenance_Guide_reviewed.html  index.html
scripts/: capture_metrics.py  capture_metrics.sh  cdp_client_env.sh  compare_metrics.sh  inject_orphan_files.py  kinit_cdp.sh  load_env.sh  run_step_with_verify.sh  seed_iceberg_table.py  setup_venv.sh  spark_sql_maintenance.py  spark_sql_maintenance.sh  validate_guide.py
spec/: iceberg-1.5.2-procedures.yaml  table-properties.yaml
src/guide_validator/: __init__.py  cdp_spark.py  cli.py  html_parser.py  link_checker.py  metrics_compare.py  policy_validator.py  procedure_validator.py  properties_validator.py  report.py  spec_loader.py  sql_extractor.py  template_renderer.py  validator.py  verification_queries.py
tests/: conftest.py  test_static_guide.py
tests/integration/: conftest.py  test_cdp_procedures.py
tests/unit/: test_html_parser.py  test_metrics_compare.py  test_procedure_validator.py  test_spark_sql_maintenance.py  test_sql_extractor.py  test_template_renderer.py  test_verification_queries.py
