[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guide-validator"
version = "0.1.0"
description = "Validation project for SBI Iceberg Compaction & Maintenance Operational Guide"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
cdp = ["pyspark==3.5.4"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "guide-validator[cdp]",
]

[project.scripts]
validate-guide = "guide_validator.cli:main"
compare-metrics = "guide_validator.metrics_compare:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cdp: CDP Spark cluster integration tests (require env vars)",
    "network: tests that require outbound HTTP access",
    "destructive: tests that modify table data or metadata (require CDP_ALLOW_DESTRUCTIVE=true)",
]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
